fix: make @AllowAnonymous.reason required, fix PluginSecurityConfigurer wiring
- @AllowAnonymous.reason() now required (no default) for security audit
- PluginSecurityConfigurer.configure() removes http.authorizeHttpRequests
  call — anonymous path permitAll moved to host's explicit chain
- Host uses http.with(configurer, Customizer.withDefaults()) instead of
  deprecated http.apply()
- Simplify reason extraction in MVC and WebFlux handler mappings
- AnonymousPathRegistrar: demote blank-reason log from WARN to DEBUG
- PluginAnonymousPathRegistry Javadoc: fix getRequestURI() → getPathWithinApplication()
- DefaultPluginAuthRegistry: simplify Collections.unmodifiableSet → Set.copyOf()

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>